--- a/src/components/tutorial/tutorial.css
+++ b/src/components/tutorial/tutorial.css
@@ -4,28 +4,6 @@
   --midgreen: rgb(48, 172, 95);
 }
 
-.tag {
-  text-align: center;
-  display: inline-block;
-  border-radius: 15px;
-  border-width: 2px;
-  margin: 5px;
-  margin-top: 2px;
-  margin-bottom: 3px;
-  padding-top: 5px;
-  width: 80px;
-  height: 20px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: lighter;
-  font-weight: bold;
-  font-size: 14px;
-  border-style: solid;
-  color:rgb(255, 255, 255);
-  background-color: var(--midgreen);
-  border-color: var(--midgreen);
-
-}
-
 .tut-container {
   border-radius: 10px;
   border-width: 3px;
@@ -89,4 +67,11 @@ a:hover {
 .tut-tags-container {
   margin-top: 7px;
   padding: 4px;
+  display: inline-block;
+}
+
+.tags {
+  display: inline-block;
+  margin-left: 2px;
+  margin-right: 2px;
 }
